# apl-core-library

./: CHANGELOG.md  CMakeLists.txt  Docker.md  Dockerfile  NOTICE.txt  README.md  THIRD-PARTY-NOTICES.txt  apl-dev-env.sh  apl-viewhost-code-check.sh  clang.cmake  components.cmake  doxygen.cmake  fedora30.Dockerfile  gcc.cmake  msvc.cmake  options.cmake  tools.cmake  ubuntu16.04.Dockerfile  ubuntu18.04.Dockerfile
android/: gradlew  (+5 more)
android/coreengine/: CMakeLists.txt  build.gradle
aplcore/: CMakeLists.txt  apl.pc.in  aplcoreConfig.cmake.in  buildTimeConstants.cpp.in  target_sources_local.cmake
aplcore/unit/: CMakeLists.txt  debugtools.cpp  debugtools.h  faketextcomponent.h  logstream.h  test_comparisons.h  test_sg_textmeasure.cpp  test_sg_textmeasure.h  testeventloop.cpp  testeventloop.h  testlogbridge.h  unittest_simpletextmeasurement.cpp
extensions/: CMakeLists.txt
extensions/alexaext/: CMakeLists.txt  alexaextConfig.cmake.in
extensions/unit/: CMakeLists.txt  unittest_activity_descriptor.cpp  unittest_apl_attention_system.cpp  unittest_apl_audio_normalization.cpp  unittest_apl_audio_player.cpp  unittest_apl_e2e_encryption.cpp  unittest_apl_metric.cpp  unittest_apl_metricV2.cpp  unittest_apl_music_alarm.cpp  unittest_apl_webflow.cpp  unittest_extension_lifecycle.cpp  unittest_extension_message.cpp  unittest_extension_provider.cpp  unittest_extension_registrar.cpp  unittest_extension_schema.cpp  unittest_local_extensions.cpp  unittest_random.cpp  unittest_resource_provider.cpp  unittest_session_descriptor.cpp  unittest_threadsafe_extension_registrar.cpp
performance/: CMakeLists.txt  alexa-layouts.json  alexa-styles.json  alexa-viewport-profiles.json  basic.json  basic_data.json  complex-list.json  complex-list_data.json  hello-world.json  perftest_base.cpp  perftest_base.h  perftest_load.cpp  perftest_operation.cpp  perftest_visual_context.cpp  simple-import.json
test/: CMakeLists.txt  fuzzAccept.cpp  fuzzColor.cpp  fuzzEasing.cpp  fuzzExpression.cpp  fuzzVersion.cpp  parseColor.cpp  parseDimension.cpp  parseDirective.cpp  parseEasing.cpp  parseExpression.cpp  parseLayout.cpp  parseResources.cpp  parseTransform.cpp  utils.h
tools/: CMakeLists.txt
tools/src/: enumgen.cpp  enumparser.cpp  enumparser.h
tools/unit/: CMakeLists.txt  unittest_enumgen.cpp
unit/: CMakeLists.txt  debugtools.cpp  debugtools.h  testdatasourceprovider.h  testeventloop.cpp  testeventloop.h  unittest_action.cpp  unittest_apl.cpp  unittest_arrayify.cpp  unittest_bounds.cpp  unittest_builder.cpp  unittest_builder_pager.cpp  unittest_builder_sequence.cpp  unittest_color.cpp  unittest_command_animateitem.cpp  unittest_command_array.cpp  unittest_command_document.cpp  unittest_command_macros.cpp  unittest_command_media.cpp  unittest_command_openurl.cpp  unittest_command_page.cpp  unittest_command_select.cpp  unittest_command_sendevent.cpp  unittest_command_setvalue.cpp  unittest_commands.cpp  unittest_component_events.cpp  unittest_context.cpp  unittest_current_time.cpp  unittest_datasource.cpp  unittest_default_component_size.cpp  unittest_dependant.cpp  unittest_dependant_graphic.cpp  unittest_dimension.cpp  unittest_directive.cpp  unittest_document.cpp  unittest_document_background.cpp  unittest_dynamic_component.cpp  unittest_dynamicindexlist.cpp  unittest_easing.cpp  unittest_encoding.cpp  (+43 more)
unit/action/: CMakeLists.txt  unittest_action.cpp
unit/animation/: unittest_easing.cpp  unittest_easing_approximation.cpp
unit/audio/: CMakeLists.txt  testaudioplayer.cpp  testaudioplayer.h  testaudioplayerfactory.h  unittest_command_page_audio.cpp  unittest_dynamictokenlist_audio.cpp  unittest_sequencer_audio.cpp  unittest_speak_item_audio.cpp  unittest_speech_marks.cpp
unit/command/: CMakeLists.txt  unittest_command_animateitem.cpp  unittest_command_animateitem_values.cpp  unittest_command_array.cpp  unittest_command_document.cpp  unittest_command_event_binding.cpp  unittest_command_media.cpp  unittest_command_openurl.cpp  unittest_command_page.cpp  unittest_command_sendevent.cpp  unittest_command_setvalue.cpp  unittest_commands.cpp  unittest_screenlock.cpp  unittest_sequencer_preservation.cpp  unittest_serialize_event.cpp  unittest_setstate.cpp  unittest_setvalue.cpp  unittest_speak_item.cpp  unittest_speak_list.cpp
unit/component/: CMakeLists.txt  unittest_accessibility_actions.cpp  unittest_accessibility_api.cpp  unittest_bounds.cpp  unittest_component_events.cpp  unittest_default_component_size.cpp  unittest_draw.cpp  unittest_dynamic_component.cpp  unittest_dynamic_container_properties.cpp  unittest_dynamic_properties.cpp  unittest_edit_text_component.cpp  unittest_find_component_at_position.cpp  unittest_flexbox.cpp  unittest_frame_component.cpp  unittest_grid_sequence_component.cpp  unittest_layout_direction.cpp  unittest_pager.cpp  unittest_properties.cpp  unittest_scroll.cpp  unittest_serialize.cpp  unittest_signature.cpp  unittest_state.cpp  unittest_text_component.cpp  unittest_tick.cpp  unittest_transform.cpp  unittest_visual_context.cpp  unittest_visual_hash.cpp
unit/content/: CMakeLists.txt  unittest_apl.cpp  unittest_directive.cpp  unittest_document.cpp  unittest_document_background.cpp  unittest_rootconfig.cpp
unit/datagrammar/: CMakeLists.txt  unittest_arithmetic.cpp  unittest_decompile.cpp  unittest_grammar.cpp  unittest_grammar_error.cpp  unittest_optimize.cpp  unittest_parse.cpp
unit/datasource/: CMakeLists.txt  testdatasourceprovider.cpp  testdatasourceprovider.h  unittest_datasource.cpp  unittest_datasource_context.cpp  unittest_dynamicindexlist.cpp  unittest_dynamictokenlist.cpp
unit/engine/: CMakeLists.txt  unittest_arrayify.cpp  unittest_builder.cpp  unittest_builder_bind.cpp  unittest_builder_config_change.cpp  unittest_builder_padding.cpp  unittest_builder_pager.cpp  unittest_builder_preserve.cpp  unittest_builder_preserve_scroll.cpp  unittest_builder_sequence.cpp  unittest_context.cpp  unittest_current_time.cpp  unittest_dependant.cpp  unittest_display_state.cpp  unittest_focus_manager.cpp  unittest_hover.cpp  unittest_keyboard_manager.cpp  unittest_layouts.cpp  (+7 more)
(+1084 files in other folders)
